indexS.css
* {
        margin: 0;
        overflow-x: hidden;
        overflow-y: hidden;
    }
nav > ul > li{
  display: inline;
  padding-right: 5%;
}
nav{
  text-align: right;
  padding-top: 1%;
}

a{
  text-decoration: none;
  font-family: "Montserrat", sans-serif;
  color: white;
}
a:hover{
  color:rgba(255, 255, 255, 0.5)
}

h1{
text-align: center;
font-family: "Montserrat", sans-serif;
}
#heading{
  z-index: 100px;
}

body{
  margin:0px;
  padding: 0px;
  height: 100vh;
  scroll-behavior: smooth;
  overflow-y: hidden;
  overflow-x: hidden;
}

span{
  text-align: center;
  font-family: "Montserrat", sans-serif;
}

#main{
  padding-top: 15%;
}
#adMain{
  padding-top: 5%;
}

.keys{
  margin-top: 3%;
}
.keyin{
  align:center;
}

.criteria{
  margin-top: 0;
  border: solid 1px rgba(255, 255, 255, 0.5);
  border-radius: 5px ;
  width:30%;
  margin-left:auto;
  margin-right: auto;
  text-align: left;
  padding: 2%;
  background-color: rgba(255, 255, 255, 0.5);
}

#adButton{
display: inline-flex;
flex-direction: column;
text-align: center;
}
.googSearchBtn{
  border-radius: 10px;
  border-style: none;
}

.animate{
  background: linear-gradient(90deg, rgba(0,212,255,1) 7%, rgba(0,0,36,1) 100%);
  width: 100%;
  height: 100vh;

}
.box-area{
  postion: absolute;
  top:0;
  left:0;
  width: 100%;
  height: 100%;
  overflow-x:hidden;
  overflow-y: hidden;
}
.box-area li{
position: absolute;
display: block;
list-style:none;
width: 25px;
height: 25px;
background: rgba(255,255,255,0.4);
animation: animate 20s linear infinite;
bottom: -150px;
}
.box-area li:nth-child(1){
left:86%;
width: 80px;
height: 80px;
animation-delay:0s;
}
.box-area li:nth-child(2){
left:12%;
width: 30px;
height: 30px;
animation-delay:1.5s;
animation-duration:10s;
}
.box-area li:nth-child(3){
left:70%;
width: 100px;
height: 100px;
animation-delay:5.5s;
}
.box-area li:nth-child(4){
left:86%;
width: 80px;
height: 80px;
animation-delay:0s;
animation-duration:5s;
}
.box-area li:nth-child(5){
left:65%;
width: 40px;
height: 40px;
animation-delay:2s;
}
.box-area li:nth-child(6){
  left:15%;
  width: 110px;
  height: 110px;
  animation-delay:3.5s;

}
.box-area li:nth-child(7){
right: 80%;
width: 120px;
height: 120px;
animation-delay:1s;
animation-delay:4s;

}
.box-area li:nth-child(8){
left:90%;
width: 110px;
height: 110px;
animation-delay:6.5s;

}
.box-area li:nth-child(9){
left:42%;
width: 110px;
height: 110px;
animation-delay:1s;
}

.box-area li:nth-child(10){
left:18%;
width: 50px;
height:50px;
animation-delay:10s;

}
.box-area li:nth-child(11){
right:70%;
width: 110px;
height: 110px;
animation-delay:7s;

}
.box-area li:nth-child(12){
left:44%;
width: 90px;
height: 90px;
animation-delay:12.5s;
}

@keyframes animate{
0%{
  transform:translateY(0) rotate(80deg);
  opacity: 1;
}
100%{
  transform:translateY(-800px) rotate(360deg);
  opacity: 1;
}

}

/*media query for devices */

@media only screen and (max-width: 600px){
  *{
    margin: 0;
  }
  .animate{
    background: linear-gradient(90deg, rgba(0,212,255,1) 7%, rgba(0,0,36,1) 100%);
    width: 100% !important;
    height: 100vh !important;

  }
  nav{
    text-align: right;
    padding-top: 2%;
  }

}

